fix: insufficient color contrast for links and post metadata

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,6 @@
 // Variables
 
 $primary-color: #fdf6e3;
-$secondary-color: #3a94c5;
+$secondary-color: #1567a0;
 $font-color: #4a565d; // Improved contrast from #5c6a72
 $background-color: #efebd4;
