--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -411,7 +411,7 @@ ul.social-buttons li a {
 .post-date {
   display: inline;
   margin-right: 0.73rem;
-  color: lighten($font-color, 20%);
+  color: lighten($font-color, 8%);
   font-size: 0.9em;
 }
 
